Fix CONTRIB-7056 - Edit menu cut off for some activities when using collapsed topics and boost.

--- a/styles_boost.css
+++ b/styles_boost.css
@@ -37,3 +37,7 @@ ul.ctopics :target {
     padding-top: 0!important;
     margin-top: 0!important;
 }
+
+.format-topcoll.path-course-view.editing #region-main > .card-block {
+    overflow-x: visible; /* CONTRIB-7056 */
+}
